LuBox/Parser/NuParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Development\NuBox\NuBox.Parser\Nu.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace NuBox.Parser {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class NuParser : Parser {
	public const int
		T__48=1, T__47=2, T__46=3, T__45=4, T__44=5, T__43=6, T__42=7, T__41=8, 
		T__40=9, T__39=10, T__38=11, T__37=12, T__36=13, T__35=14, T__34=15, T__33=16, 
		T__32=17, T__31=18, T__30=19, T__29=20, T__28=21, T__27=22, T__26=23, 
		T__25=24, T__24=25, T__23=26, T__22=27, T__21=28, T__20=29, T__19=30, 
		T__18=31, T__17=32, T__16=33, T__15=34, T__14=35, T__13=36, T__12=37, 
		T__11=38, T__10=39, T__9=40, T__8=41, T__7=42, T__6=43, T__5=44, T__4=45, 
		T__3=46, T__2=47, T__1=48, T__0=49, NAME=50, NORMALSTRING=51, CHARSTRING=52, 
		LONGSTRING=53, INT=54, HEX=55, FLOAT=56, HEX_FLOAT=57, COMMENT=58, LINE_COMMENT=59, 
		WS=60, SHEBANG=61;
	public static readonly string[] tokenNames = {
		"<INVALID>", "']'", "'in'", "'local'", "','", "'while'", "'['", "'or'", 
		"'-'", "'*'", "':'", "'('", "'not'", "'if'", "'<'", "'false'", "'<='", 
		"'until'", "'nil'", "'~='", "'...'", "'{'", "'break'", "'and'", "'else'", 
		"'}'", "'true'", "'elseif'", "'do'", "'%'", "'^'", "'.'", "'function'", 
		"')'", "'+'", "'::'", "'for'", "'return'", "'='", "';'", "'goto'", "'repeat'", 
		"'>'", "'then'", "'=='", "'/'", "'>='", "'#'", "'end'", "'..'", "NAME", 
		"NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", 
		"COMMENT", "LINE_COMMENT", "WS", "SHEBANG"
	};
	public const int
		RULE_chunk = 0, RULE_block = 1, RULE_stat = 2, RULE_retstat = 3, RULE_label = 4, 
		RULE_funcname = 5, RULE_varlist = 6, RULE_namelist = 7, RULE_explist = 8, 
		RULE_exp = 9, RULE_var = 10, RULE_prefixexp = 11, RULE_functioncall = 12, 
		RULE_varOrExp = 13, RULE_nameAndArgs = 14, RULE_varSuffix = 15, RULE_args = 16, 
		RULE_functiondef = 17, RULE_funcbody = 18, RULE_parlist = 19, RULE_tableconstructor = 20, 
		RULE_fieldlist = 21, RULE_field = 22, RULE_fieldsep = 23, RULE_operatorOr = 24, 
		RULE_operatorAnd = 25, RULE_operatorComparison = 26, RULE_operatorStrcat = 27, 
		RULE_operatorAddSub = 28, RULE_operatorMulDivMod = 29, RULE_operatorUnary = 30, 
		RULE_operatorPower = 31, RULE_number = 32, RULE_string = 33;
	public static readonly string[] ruleNames = {
		"chunk", "block", "stat", "retstat", "label", "funcname", "varlist", "namelist", 
		"explist", "exp", "var", "prefixexp", "functioncall", "varOrExp", "nameAndArgs", 
		"varSuffix", "args", "functiondef", "funcbody", "parlist", "tableconstructor", 
		"fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
		"operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorUnary", 
		"operatorPower", "number", "string"
	};

	public override string GrammarFileName { get { return "Nu.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public NuParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ChunkContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(NuParser.Eof, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterChunk(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitChunk(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_chunk);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; block();
			State = 69; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public IReadOnlyList<StatContext> stat() {
			return GetRuleContexts<StatContext>();
		}
		public RetstatContext retstat() {
			return GetRuleContext<RetstatContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__46) | (1L << T__44) | (1L << T__38) | (1L << T__36) | (1L << T__27) | (1L << T__21) | (1L << T__17) | (1L << T__14) | (1L << T__13) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << NAME))) != 0)) {
				{
				{
				State = 71; stat();
				}
				}
				State = 76;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 78;
			_la = _input.La(1);
			if (_la==T__12) {
				{
				State = 77; retstat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public NamelistContext namelist() {
			return GetRuleContext<NamelistContext>(0);
		}
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public VarlistContext varlist() {
			return GetRuleContext<VarlistContext>(0);
		}
		public FunctioncallContext functioncall() {
			return GetRuleContext<FunctioncallContext>(0);
		}
		public IReadOnlyList<ExpContext> exp() {
			return GetRuleContexts<ExpContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public ITerminalNode NAME() { return GetToken(NuParser.NAME, 0); }
		public FuncbodyContext funcbody() {
			return GetRuleContext<FuncbodyContext>(0);
		}
		public FuncnameContext funcname() {
			return GetRuleContext<FuncnameContext>(0);
		}
		public IReadOnlyList<BlockContext> block() {
			return GetRuleContexts<BlockContext>();
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_stat);
		int _la;
		try {
			State = 161;
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 80; Match(T__10);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 81; varlist();
				State = 82; Match(T__11);
				State = 83; explist();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 85; functioncall();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 86; label();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 87; Match(T__27);
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 88; Match(T__9);
				State = 89; Match(NAME);
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 90; Match(T__21);
				State = 91; block();
				State = 92; Match(T__1);
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 94; Match(T__44);
				State = 95; exp(0);
				State = 96; Match(T__21);
				State = 97; block();
				State = 98; Match(T__1);
				}
				break;

			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 100; Match(T__8);
				State = 101; block();
				State = 102; Match(T__32);
				State = 103; exp(0);
				}
				break;

			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 105; Match(T__36);
				State = 106; exp(0);
				State = 107; Match(T__6);
				State = 108; block();
				State = 116;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__22) {
					{
					{
					State = 109; Match(T__22);
					State = 110; exp(0);
					State = 111; Match(T__6);
					State = 112; block();
					}
					}
					State = 118;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 121;
				_la = _input.La(1);
				if (_la==T__25) {
					{
					State = 119; Match(T__25);
					State = 120; block();
					}
				}

				State = 123; Match(T__1);
				}
				break;

			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 125; Match(T__13);
				State = 126; Match(NAME);
				State = 127; Match(T__11);
				State = 128; exp(0);
				State = 129; Match(T__45);
				State = 130; exp(0);
				State = 133;
				_la = _input.La(1);
				if (_la==T__45) {
					{
					State = 131; Match(T__45);
					State = 132; exp(0);
					}
				}

				State = 135; Match(T__21);
				State = 136; block();
				State = 137; Match(T__1);
				}
				break;

			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 139; Match(T__13);
				State = 140; namelist();
				State = 141; Match(T__47);
				State = 142; explist();
				State = 143; Match(T__21);
				State = 144; block();
				State = 145; Match(T__1);
				}
				break;

			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 147; Match(T__17);
				State = 148; funcname();
				State = 149; funcbody();
				}
				break;

			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 151; Match(T__46);
				State = 152; Match(T__17);
				State = 153; Match(NAME);
				State = 154; funcbody();
				}
				break;

			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 155; Match(T__46);
				State = 156; namelist();
				State = 159;
				_la = _input.La(1);
				if (_la==T__11) {
					{
					State = 157; Match(T__11);
					State = 158; explist();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RetstatContext : ParserRuleContext {
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public RetstatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_retstat; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterRetstat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitRetstat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRetstat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RetstatContext retstat() {
		RetstatContext _localctx = new RetstatContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_retstat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163; Match(T__12);
			State = 165;
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__41) | (1L << T__38) | (1L << T__37) | (1L << T__34) | (1L << T__31) | (1L << T__29) | (1L << T__28) | (1L << T__23) | (1L << T__17) | (1L << T__2) | (1L << NAME) | (1L << NORMALSTRING) | (1L << CHARSTRING) | (1L << LONGSTRING) | (1L << INT) | (1L << HEX) | (1L << FLOAT) | (1L << HEX_FLOAT))) != 0)) {
				{
				State = 164; explist();
				}
			}

			State = 168;
			_la = _input.La(1);
			if (_la==T__10) {
				{
				State = 167; Match(T__10);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(NuParser.NAME, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 170; Match(T__14);
			State = 171; Match(NAME);
			State = 172; Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncnameContext : ParserRuleContext {
		public ITerminalNode NAME(int i) {
			return GetToken(NuParser.NAME, i);
		}
		public IReadOnlyList<ITerminalNode> NAME() { return GetTokens(NuParser.NAME); }
		public FuncnameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcname; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterFuncname(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitFuncname(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncname(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncnameContext funcname() {
		FuncnameContext _localctx = new FuncnameContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_funcname);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 174; Match(NAME);
			State = 179;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__18) {
				{
				{
				State = 175; Match(T__18);
				State = 176; Match(NAME);
				}
				}
				State = 181;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 184;
			_la = _input.La(1);
			if (_la==T__39) {
				{
				State = 182; Match(T__39);
				State = 183; Match(NAME);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarlistContext : ParserRuleContext {
		public VarContext var(int i) {
			return GetRuleContext<VarContext>(i);
		}
		public IReadOnlyList<VarContext> var() {
			return GetRuleContexts<VarContext>();
		}
		public VarlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varlist; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterVarlist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitVarlist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarlistContext varlist() {
		VarlistContext _localctx = new VarlistContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_varlist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 186; var();
			State = 191;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__45) {
				{
				{
				State = 187; Match(T__45);
				State = 188; var();
				}
				}
				State = 193;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamelistContext : ParserRuleContext {
		public ITerminalNode NAME(int i) {
			return GetToken(NuParser.NAME, i);
		}
		public IReadOnlyList<ITerminalNode> NAME() { return GetTokens(NuParser.NAME); }
		public NamelistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namelist; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterNamelist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitNamelist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamelist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamelistContext namelist() {
		NamelistContext _localctx = new NamelistContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_namelist);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 194; Match(NAME);
			State = 199;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 195; Match(T__45);
					State = 196; Match(NAME);
					}
					} 
				}
				State = 201;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExplistContext : ParserRuleContext {
		public IReadOnlyList<ExpContext> exp() {
			return GetRuleContexts<ExpContext>();
		}
		public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public ExplistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_explist; } }
		public override void EnterRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.EnterExplist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			INuListener typedListener = listener as INuListener;
			if (typedListener != null) typedListener.ExitExplist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INuVisitor<TResult> typedVisitor = visitor as INuVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExplist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExplistContext explist() {
		ExplistContext _localctx = new ExplistContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_explist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 202; exp(0);
			State = 207;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__45) {
				{
				{
				State = 203; Match(T__45);
				State = 204; exp(0);
				}
				}
				State = 209;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
